--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-click==8.0.4
-dataclasses==0.8
-Flask==2.0.3
-importlib-metadata==4.8.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-pkg-resources==0.0.0
-typing-extensions==4.1.1
-Werkzeug==2.0.3
-zipp==3.6.0
+blinker==1.6.2
+certifi==2023.5.7
+click==8.1.3
+distlib==0.3.6
+filelock==3.12.0
+Flask==2.3.2
+importlib-metadata==6.6.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+pipenv==2023.6.2
+platformdirs==3.5.1
+virtualenv==20.23.0
+virtualenv-clone==0.5.7
+Werkzeug==2.3.5
+zipp==3.15.0
